--- a/css/prj/core.css
+++ b/css/prj/core.css
@@ -6,6 +6,7 @@
 @import url("media.css");
 @import url("font.css");
 @import url("article.css");
+@import url("paragraph.css");
 
 /* Color CSS, uncomment if desired for debugging
    ========================================================================== */
@@ -44,12 +45,12 @@ cite{display:block; text-align:right; padding-top: 10px;}
 main {display:inline-block; width:70%; border-right: thin dotted black;}
 aside {display:inline-block; width:20%; float:right; }
 
-body > header {margin: 0% 0% 2% 0%; }
+body > header {margin: 0% 0% 0% 0%; }
 body > header > h1  {margin: 0% 0% 0% 2%; }
 body > header > nav  > ul {margin:0% 0% 0% 0%; }
 
 main { margin: 0% 1% 1% 5% ;  padding: 1% 1% 1% 1%; }
-main p { margin: 0% 0% 1% 1% ;  padding: 0% 0% 0% 0%; }
+main p { margin: 0% 0% 3% 1% ;  padding: 0% 0% 0% 0%; }
 
 section { margin: 0% 0% 1% 1% ;  padding: 0% 0% 0% 0%; }
 section > header { margin: 0% 0% 0% 0% ;  padding: 0% 0% 0% 0%; }
@@ -58,8 +59,10 @@ section > header > nav { margin: 0% 0% 0% 0% ;  padding: 0% 0% 0% 0%; }
 section > header > nav > ul { margin: 0% 0% 0% 0% ;  padding: 0% 0% 0% 0%; }
 section  > table { margin: 1% 0% 0% 1% ;  padding: 0% 0% 1% 0%; }
 
-article > header  {margin-left:1%; }
+article {margin-top: 1%;}
+article > header  {margin-left:0%; }
 article > * { margin: 0% 0% 0% 1% ;  padding: 0% 0% 0.5% 0%; }
+
 
 aside header {margin: 0 0 0 0; padding: 0 0 0 0; }
 aside header h1 {margin: 0 0 0 0; padding: 0 0 0 0; }
@@ -68,12 +71,8 @@ aside header nav ul {margin: 0 0 0 0; padding: 0 0 0 0; }
 aside ul.asidelist {margin: 1% 0 0 0%; padding: 0 0 0 0; list-style-type: none;}
 aside ul.asidelist li {margin: 0 0 0 1%; padding: 0 0 0 0;}
 
-
-
-
 body > footer  > *  {margin-left:2%; margin-top: 0; }
 body > footer > h1  {margin-bottom:0%; }
 body > footer > nav  > ul {margin-top:0%; }
 
-div.main-wrapper { margin: 0% 0% 2% 0%; }
 
